--- a/pertemuan-3/tugas.html
+++ b/pertemuan-3/tugas.html
@@ -8,17 +8,16 @@
 </head>
 <body>
   <script>
-    let apel;
+    let apel 
     let jeruk;
     let total = apel + jeruk 
   </script>
-  <center>
-    <p>Input jumlah buah</p>
+
+  <p>Input jumlah buah</p>
     <input type="text" id="inputjeruk">
-    <input type="text" id="inputapel"">
-    <!-- jika di klik -->
-    <!-- <button id="hasil">Hitung</button> -->
-    <label>Total :<b id="hasiltotal""></b></label>
-  </center>
+    <input type="text" id="inputapel">
+    <button id="hasil">Hitung</button>
+    <label>Total :<b id="hasiltotal"></b></label>
+
 </body>
 </html>
