--- a/pertemuan-3/tugas.html
+++ b/pertemuan-3/tugas.html
@@ -8,16 +8,21 @@
 </head>
 <body>
   <script>
-    let apel 
-    let jeruk;
-    let total = apel + jeruk 
+    function klik(){
+      let apel = parseInt(document.getElementById("inputjeruk").value);
+      let jeruk= parseInt(document.getElementById("inputapel").value);
+      let total = apel + jeruk
+      let hasil = document.getElementById("hasiltotal");
+      hasil.textContent = "total:"+ total;
+    }
   </script>
 
   <p>Input jumlah buah</p>
-    <input type="text" id="inputjeruk">
-    <input type="text" id="inputapel">
-    <button id="hasil">Hitung</button>
-    <label>Total :<b id="hasiltotal"></b></label>
+    <input type="number" id="inputjeruk">
+    <input type="number" id="inputapel">
+    <button onclick="klik()">Hitung</button>
+    <span id="hasiltotal"></span>
+    <!-- <label>Total :<b id="hasiltotal"></b></label> -->
 
 </body>
 </html>
