--- a/pertemuan-3/tugas.html
+++ b/pertemuan-3/tugas.html
@@ -24,5 +24,6 @@
     <span id="hasiltotal"></span>
     <!-- <label>Total :<b id="hasiltotal"></b></label> -->
 
+    <!-- link refrensi ==> https://www.w3schools.com/jsref/prop_node_textcontent.asp -->
 </body>
 </html>
