--- a/pertemuan-14/index.html
+++ b/pertemuan-14/index.html
@@ -7,6 +7,7 @@
 
     <script src="product.js"></script>
     <script src="cart.js"></script>
+    <script src="wallet.js"></script>
 </head>
 <body>
     
