--- a/pertemuan-10/latihan-while.html
+++ b/pertemuan-10/latihan-while.html
@@ -23,6 +23,12 @@
             document.write(`total perulangan ${hitung} <br>`)
         }
 
+        let hitungan = 0;
+    do {
+      hitungan++;
+      ulangi = confirm("apakah anda ingin mengulang lagi ?")
+    } while (ulangi)
+    ulangi = confirm("apakah anda ingin mengulang lagi ?")
 
     </script>
 </body>
