--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <td>10</td>
                 <td>Pertemuan 10</td>
                 <td>
-                    <button><a href="pertemuan-10/latihan-while.html">klik</a></button>
+                    <button><a href="pertemuan-10/chalenge .html">klik</a></button>
                 </td>
             </tr>
         </tbody>
