berhasil melakukan filterasi jika ingin menghapus tinggal klik lagi button nya

--- a/pertemuan-9/chalenge copy.html
+++ b/pertemuan-9/chalenge copy.html
@@ -55,7 +55,8 @@
             //variable nyimpan kursi
             let seatName = event.target.textContent;
             if(selectedSeat.includes(seatName)){
-
+                // melakuan filter jika dia batal
+                selectedSeat = selectedSeat.filter((seat)=>seat !== seatName);
             }else{
                 // let seatSelected = event.target.textContent;
                 // jika di klik akan menyimpan data nya
