Add materi koding subuh

--- a/pertemuan-11/array.html
+++ b/pertemuan-11/array.html
@@ -8,16 +8,20 @@
 <body>
 
     <script>
-let produk = [
-        "🤣",
-        "👍",
-        "😍",
-        "😒"
+    let artikel = [
+        "Belajar javascript untuk pemula",
+        "Pengalaman pertama coding javascript",
+        "javascript tidak sama dengan java",
+        "javascript adalah bahasa favoritku",
+        "semua bisa di coding di javascript",
+        "Contoh aplikasi yang dibuat dengan javascript"
         ];
 
+        const tags = ["coding", "programing", "javascript"];
+        console.log(artikel[4]);
         // produk.includes("😍")
-        document.write(produk.includes(" "))
-        for(p of produk){
+        document.write(artikel.includes(" "))
+        for(p of artikel){
             // document.write("emote"+ produk)
         }
     </script>
