--- a/pertemuan-11/array.html
+++ b/pertemuan-11/array.html
@@ -26,12 +26,16 @@
         
         // menampilkan data aray dengan perulangan 
         artikel.forEach(artikel => {
-            document.write(`<h1>${artikel} </h1>`);
+            document.write(`<h1>${artikel} </h1> <br/>`);
             for(tag of tags){
                 document.write(`<i>${tag}</i>`);
             }
         });
         
+        // menambahkan data aray di tengah tengah atau yang kita inginkan
+        tags.splice(0,1, "sofware dev");
+        console.log(tags);
+
         // produk.includes("😍")
         document.write(artikel.includes(" "))
         for(p of artikel){
