berhasil edit data di dalam array nya

--- a/pertemuan-11/to-do-list.html
+++ b/pertemuan-11/to-do-list.html
@@ -75,7 +75,26 @@
 
             showTask();
         }
-        
+
+        // mengambil id nya 
+        function editTask(id){
+            // alert(id)
+
+            const oldtask = task[id];
+            const newTask = prompt("edit task", oldtask);
+
+            // melakukan pengecekan apakah di edit atau di cancel
+            if(newTask){
+                task[id] = newTask;
+                showTask();
+            }
+
+        }
+
+        function deletTask(){
+
+        }
+
     </script>
 
 </body>
