--- a/pertemuan-11/to-do-list.html
+++ b/pertemuan-11/to-do-list.html
@@ -91,8 +91,14 @@
 
         }
 
-        function deletTask(){
+        // membuat fungsi untuk menghapus task nya
+        function deletTask(id){
+            const confirmtable = confirm("apakah anda ingin menghapus nya ?")
+            if(confirmtable){
+                task.splice(id, 1); // hanya menghapus satu data pad data yg di pilih
+                showTask();
 
+            }
         }
 
     </script>
