--- a/pertemuan-11/to-do-list.html
+++ b/pertemuan-11/to-do-list.html
@@ -29,7 +29,7 @@
                 `
             }else{
                 //tampilkan list task
-                const ul = document.createElement("ul");
+                const ul = document.createElement("ul"); //membuat elemet html
                 for(let id = 0; id<task.length; id++){
                     const li = document.createElement("li");
 
