update indexs nya

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <tr>
                 <td>1</td>
                 <td>Pertemuan 1</td>
+                <td>Pengenalan Javascript</td>
                 <td>
                     <button><a href="kenalan js/Hello-world.html">klik</a></button>
                 </td>
@@ -23,6 +24,7 @@
             <tr>
                 <td>2</td>
                 <td>Pertemuan 2</td>
+                <td>Fungsi Input dan Output</td>
                 <td>
                     <button><a href="input/">klik</a></button>
                 </td>
@@ -30,6 +32,7 @@
             <tr>
                 <td>3</td>
                 <td>Pertemuan 3</td>
+                <td>Variabel, Konstanta, & Tipe Data</td>
                 <td>
                     <button><a href="">klik</a></button>
                 </td>
@@ -37,6 +40,7 @@
             <tr>
                 <td>4</td>
                 <td>Pertemuan 4</td>
+                <td> Operator 1 (Aritmatika & Assignment)</td>
                 <td>
                     <button><a href="pertemuan-4/">klik</a></button>
                 </td>
@@ -44,6 +48,7 @@
             <tr>
                 <td>5</td>
                 <td>Pertemuan 5</td>
+                <td>Operator 2 (Perbandingan, Logika, Ternary)</td>
                 <td>
                     <button><a href="pertemuan-5/">klik</a></button>
                 </td>
@@ -51,6 +56,8 @@
             <tr>
                 <td>6</td>
                 <td>Pertemuan 6</td>
+                <td> Operator 3 (Bitwise)</td>
+                <td></td>
                 <td>
                     <button><a href="pertemuan-6/latihan-bitwise.html">klik</a></button>
                 </td>
@@ -58,6 +65,7 @@
             <tr>
                 <td>7</td>
                 <td>Pertemuan 7</td>
+                <td>Control Flow (Percabangan)</td>
                 <td>
                     <button><a href="pertemuan-7/saldo.html">klik</a></button>
                 </td>
@@ -65,6 +73,7 @@
             <tr>
                 <td>8</td>
                 <td>Pertemuan 8</td>
+                <td>Control Flow II (Switch/Case)</td>
                 <td>
                     <button><a href="pertemuan-8/latihanSwitch.html">klik</a></button>
                 </td>
@@ -72,6 +81,7 @@
             <tr>
                 <td>9</td>
                 <td>Pertemuan 9</td>
+                <td>Perulangan FOR, FOR..OF, FOR..IN</td>
                 <td>
                     <button><a href="pertemuan-9/chalenge.html">klik</a></button>
                 </td>
@@ -79,6 +89,16 @@
             <tr>
                 <td>10</td>
                 <td>Pertemuan 10</td>
+                <td>Perulangan WHILE dan DO/WHILE</td>
+                <td>
+                    <button><a href="pertemuan-10/chalenge .html">klik</a></button>
+                </td>
+            </tr>
+
+            <tr>
+                <td>11</td>
+                <td>Pertemuan 10</td>
+                <td>Array</td>
                 <td>
                     <button><a href="pertemuan-10/chalenge .html">klik</a></button>
                 </td>
