--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <td>Pertemuan 10</td>
                 <td>Array</td>
                 <td>
-                    <button><a href="pertemuan-10/chalenge .html">klik</a></button>
+                    <button><a href="pertemuan-11/to-do-list.html">klik</a></button>
                 </td>
             </tr>
         </tbody>
