--- a/index.html
+++ b/index.html
@@ -103,6 +103,24 @@
                     <button><a href="pertemuan-11/to-do-list.html">klik</a></button>
                 </td>
             </tr>
+            
+            <tr>
+                <td>12</td>
+                <td>Pertemuan 12</td>
+                <td>Objek</td>
+                <td>
+                    <button><a href="pertemuan-12/latiahan-objek.html">klik</a></button>
+                </td>
+            </tr>
+
+            <tr>
+                <td>13</td>
+                <td>Pertemuan 13</td>
+                <td>fungsi</td>
+                <td>
+                    <button><a href="pertemuan-13/latihan-fungsi.html">klik</a></button>
+                </td>
+            </tr>
         </tbody>
 
     </table>
