--- a/pertemuan-14/index.html
+++ b/pertemuan-14/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OOP</title>
+    <title>OOP JS PRODUK</title>
 
-    <script src="product.js"></script>
-    <script src="cart.js"></script>
-    <script src="wallet.js"></script>
+    <script src="Product.js"></script>
+    <script src="Cart.js"></script>
+    <script src=""></script>
 </head>
 <body>
     
