menambahkan file untuk wallet nya / pembayaran nya

--- a/pertemuan-14/index.html
+++ b/pertemuan-14/index.html
@@ -7,6 +7,7 @@
 
     <script src="Product.js"></script>
     <script src="Cart.js"></script>
+    <script src="Wallet.js"></script>
 </head>
 <body>
     
