--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
                     <button><a href="pertemuan-13/latihan-fungsi.html">klik</a></button>
                 </td>
             </tr>
+            <tr>
+                <td>14</td>
+                <td>Pertemuan 14</td>
+                <td>fungsi</td>
+                <td>
+                    <button><a href="pertemuan-14/index.html">klik</a></button>
+                </td>
+            </tr>
         </tbody>
 
     </table>
