membuat keranjang nya

--- a/pertemuan-15/index.html
+++ b/pertemuan-15/index.html
@@ -30,7 +30,9 @@
             <span id="wallet-balance">0</span>
         </div>
     </nav>
+    <!-- element buar menampilkan list produk -->
     <div id="product-list">
+        <!-- element untuk menampilkan produk di dalam keranjang  -->
         <dialog id="cart-dialog">
             <!-- element untuk menampilkan produk di keranjang -->
             <div id="product-list-in-cart"></div>
@@ -41,5 +43,7 @@
         </dialog>
     </div>
     <script src="main.js"></script>
+
+
 </body>
 </html>
