--- a/index.html
+++ b/index.html
@@ -137,3 +137,6 @@
     <!-- pertemuan 23 masuk tp gagal load -->
 </body>
 </html>
+
+<!-- mengikuti kelas dan sudah absen -->
+<!-- Pertemuan #27: Latihan Project 4 -->
