--- a/index.html
+++ b/index.html
@@ -124,9 +124,18 @@
             <tr>
                 <td>14</td>
                 <td>Pertemuan 14</td>
-                <td>fungsi</td>
+                <td>OOP, Object Prototype & Class</td>
                 <td>
                     <button><a href="pertemuan-14/index.html">klik</a></button>
+                </td>
+            </tr>
+            
+            <tr>
+                <td>15</td>
+                <td>Pertemuan 14</td>
+                <td>DOM (Lanjut Project Toko)</td>
+                <td>
+                    <button><a href="pertemuan-15/dian/index.html">klik</a></button>
                 </td>
             </tr>
         </tbody>
