--- a/pertemuan-16/latihan-1.html
+++ b/pertemuan-16/latihan-1.html
@@ -55,8 +55,13 @@
 
         // membuat custom event
         // event listener
+        // hendle clik termnya
         inputAcceptTerm.addEventListener("click", handleTermsChecked);
+        // hendle show dan hide password nya
         btnShowPassword.addEventListener("click", handleShowHidePassword);
+
+        // hendle submit nya
+        formRegister.addEventListener("submit", handleSubmit);
 
         // fungsi handel checked
         function handleTermsChecked(event){
@@ -81,6 +86,17 @@
                     <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0"/>
                   </svg>`
             }
+        }
+
+        // handle submit 
+        function handleSubmit(event){
+            event.preventDefault();
+
+            const formData = new FormData(formRegister);
+
+            const newUser = Object.fromEntries(formData);
+
+            console.log(newUser);
         }
 
 
