--- a/pertemuan-16/latihan-1.html
+++ b/pertemuan-16/latihan-1.html
@@ -6,6 +6,8 @@
     <title>Test Event</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
+
 </head>
 <body>
     <div class="container mt-5">
@@ -54,6 +56,8 @@
         const btnSubmit = document.querySelector("#btnSubmit");
 
         // membuat custom event
+        const congratulation = new Event('congratulation');
+
         // event listener
         // hendle clik termnya
         inputAcceptTerm.addEventListener("click", handleTermsChecked);
@@ -62,6 +66,9 @@
 
         // hendle submit nya
         formRegister.addEventListener("submit", handleSubmit);
+       
+        // congrate
+        document.addEventListener('congratulation', handleCongratulation);
 
         // fungsi handel checked
         function handleTermsChecked(event){
@@ -97,7 +104,19 @@
             const newUser = Object.fromEntries(formData);
 
             console.log(newUser);
+            //triger codtem event
+            document.dispatchEvent(congratulation)
         }
+
+        function handleCongratulation(){
+            console.log("selamat, anda sudah berhasil menjadi user");
+
+            confetti({
+                particleCount: 100,
+                spread: 70,
+                origin: { y: 0.6 },
+            })
+          }
 
 
     </script>
