--- a/index.html
+++ b/index.html
@@ -132,10 +132,19 @@
             
             <tr>
                 <td>15</td>
-                <td>Pertemuan 14</td>
+                <td>Pertemuan 15</td>
                 <td>DOM (Lanjut Project Toko)</td>
                 <td>
                     <button><a href="pertemuan-15/dian/index.html">klik</a></button>
+                </td>
+            </tr>
+
+            <tr>
+                <td>16</td>
+                <td>Pertemuan 14</td>
+                <td>Event Handling & Form Processing</td>
+                <td>
+                    <button><a href="pertemuan-16/latihan-1.html">klik</a></button>
                 </td>
             </tr>
         </tbody>
