--- a/pertemuan-20/latihan-afload-promise.html
+++ b/pertemuan-20/latihan-afload-promise.html
@@ -52,7 +52,7 @@
         }
 
         async function uploadFile(){
-            const UPLOAD_URL = "https://33zfhf-3000.csb.app/upload";
+            const UPLOAD_URL = "https://q6lg23-3000.csb.app//upload";
             const fileInput = document.querySelector("#fileInput");
             const file = fileInput.files[0]; // Mengambil file
 
