--- a/pertemuan-23/src/register.html
+++ b/pertemuan-23/src/register.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Vite</title>
-    <script type="module" crossorigin src="/assets/main-DrIVgwBM.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-9kx3olKa.css">
+    <title>register</title>
+    <script type="module" src="./js/main.js"></script>
   </head>
   <body>
     <div class="container py-4 px-3 mx-auto">
