--- a/pertemuan-24/src/register.html
+++ b/pertemuan-24/src/register.html
@@ -53,7 +53,7 @@
   </div>
 
 
-  <script>
+  <!-- <script>
     const formRegister = document.querySelector("#formRegister");
     const inputAcceptTerm = document.querySelector("#inputAcceptTerms");
     const btnShowPassword = document.querySelector("#btnShowPassword");
@@ -145,6 +145,6 @@
       });
     }
 
-  </script>
+  </script> -->
 </body>
 </html>
