--- a/pertemuan-24/src/register.html
+++ b/pertemuan-24/src/register.html
@@ -24,6 +24,11 @@
             <label for="name">Name</label>
             <input type="text" name="name" class="form-control" id="inputName" placeholder="Nama lengkap"/>
           </div>
+          
+          <div class="mb-3">
+            <label for="phoneNumber">Name</label>
+            <input type="text" name="phoneNumber" class="form-control" id="phoneNumber" placeholder="your Number"/>
+          </div>
           <div class="mb-3">
             <label for="email">Email</label>
             <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Alamat email"/>
